Finished layout and routes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,9 +9,8 @@
   <body>
     <div class="container">
       <%= render 'layouts/header' %>
-      <section class="round">
-        <%= yield %>
-      </section>
+      <section class="round"><%= yield %></section>
+      <br />
       <%= render 'layouts/footer' %>
     </div>
   </body>
