--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -20,6 +20,8 @@ section {
   font-size: 120%;
   padding: 20px;
   background: #fff;
+
+  white-space: nowrap;
 }
 
 section h1 {
@@ -55,6 +57,7 @@ nav {
 nav ul {
   margin: 0;
   padding: 0;
+
 }
 
 nav ul li {
