--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,11 +2,7 @@
 
 <%= will_paginate %>
 <ul class="users">
-  <% @users.each do |user| %>
-    <li>
-      <%= gravatar_for user, :size => 30 %>
-      <%= link_to user.name, user %>
-    </li>
-  <% end %>
+    <%= render @users # searches for a _user partial! - 
+     # call either on user or @user, the latter will automagically iterate. %> 
 </ul>
 <%= will_paginate %>
