--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,6 @@
 
 <%= will_paginate %>
 <ul class="users">
-    <%= render @users # searches for a _user partial! - 
-     # call either on user or @user, the latter will automagically iterate. %> 
+    <%= render @users  %> 
 </ul>
 <%= will_paginate %>
