--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,7 +19,7 @@
     </td>
     <td class = "sidebar round">
       <strong>Name: </strong> <%= @user.name %> <br/>
-      <strong>URL: </strong> <%= link_to user_url(@user), @user %>
+      <strong>URL: </strong> <%= link_to user_url(@user), @user %><br />
       <strong>Microposts</strong> <%= @user.microposts.count %>
     </td>
   </tr>
